# tavari

./: .dockerignore  .env.dokploy  .env.example  .gitignore  ADMIN_DASHBOARD.md  BUTTONS.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_AI_FEATURE.md  DEPLOYMENT_NATURAL_LANGUAGE.md  DEPLOYMENT_UX_REVOLUTION.md  DOKPLOY.md  Dockerfile  FEATURES.md  README.md  SETUP.md  START_HERE.md  docker-compose.yml  docker-entrypoint.sh  init.sql  run_migration.sh  test_media_download.sh
migrations/: add_pending_command.sql  add_water_settings.sql
src/: main.rs  webhook.rs
src/handlers/: message_handler.rs  mod.rs  onboarding.rs  reminder.rs
src/models/: mod.rs
src/services/: admin.rs  ai_service.rs  bird.rs  database.rs  mod.rs  openrouter.rs  whatsapp.rs
src/webhook/: admin.rs
static/: admin_dashboard.html
